CKAD/06.Service and Network/pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: frontend
spec:
  containers:
  - name: myapp-pod
    image: nginx
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
