CKAD/06.Service and Network/service-definition-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
    type: frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008
